# door-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.claude/skills/docstring/: .skillfish.json
.github/workflows/: ci.yml
deploy/: door-sync.logrotate  door-sync.service
docs/: api.rst  architecture.md  conf.py  configuration.rst  index.rst  requirements.txt  usage.rst
docs/api/: alert.rst  audit.rst  civicrm.rst  cli.rst  config.rst  index.rst  models.rst  orchestrator.rst  reconciler.rst  safety.rst  scheduler.rst  state.rst  tier_mapping.rst  unifi.rst
docs/architecture/: conventions.rst  design.rst  index.rst  reconciliation.rst
docs/superpowers/plans/: 2026-05-22-civicrm-client.md  2026-05-22-config-loader.md  2026-05-22-pure-modules-first-slice.md  2026-05-22-unifi-client.md  2026-05-23-orchestrator.md  2026-05-24-scheduler.md  2026-06-17-sync-member-email.md
docs/superpowers/specs/: 2026-05-22-civicrm-client-design.md  2026-05-22-config-loader-design.md  2026-05-22-pure-modules-first-slice-design.md  2026-05-22-unifi-client-design.md  2026-05-23-orchestrator-design.md  2026-05-24-scheduler-design.md  2026-05-27-manual-test-plan.md  2026-06-17-sync-member-email-design.md
src/door_sync/: __init__.py  __main__.py  alert.py  audit.py  cli.py  config.py  models.py  orchestrator.py  reconciler.py  safety.py  scheduler.py  state.py  tier_mapping.py
src/door_sync/civicrm/: client.py
src/door_sync/unifi/: client.py
tests/: test_alert.py  test_audit.py  test_civicrm_client.py  test_cli.py  test_config.py  test_main.py  test_models.py  test_orchestrator.py  test_reconciler.py  test_safety.py  test_scheduler.py  test_smoke.py  test_state.py  test_tier_mapping.py  test_unifi_client.py
