[project]
name = "door-sync"
version = "0.1.0"
description = "CiviCRM-to-UniFi sync service for door access control"
readme = "README.md"
authors = [
    { name = "Ryan Morash", email = "ryan@tvcog.net" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
door-sync = "door_sync.__main__:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-httpx>=0.30",
    "ruff>=0.15.14",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501", # line length handled by formatter/readability tradeoffs
]

[tool.ruff.lint.isort]
known-first-party = ["door_sync"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pyrefly]
project-includes = [
    "src",
    "tests",
]
search-path = ["src"]
python-version = "3.11.0"
preset = "legacy"
